# flowwow

./: .env.local  .env.local.wallet  .gitignore  Dockerfile.wallet  Dockerfile.web  README.md  docker-compose.yml  flow.json  package-lock.json  package.json  pets.json  tsconfig.json
api/: Cargo.toml
api/src/: README.md  cmd.rs  handler.rs  main.rs
minter/: Cargo.toml
minter/src/: main.rs
public/: index.html
src/: App.css  App.tsx  AuthCluster.js  AuthCluster.tsx  Card.scss  Card.tsx  Hero.scss  Hero.tsx  Nav.tsx  Tiles.tsx  TokenData.tsx  config.js  config.ts  helpers.ts  index.tsx  pet.ts  pets.json  storage.ts  theme.scss  types.d.ts
src/Loader/: Loader.tsx  loader.scss
src/cadence/contracts/: PetShopContract.cdc
src/cadence/scripts/: CheckTokenMetadata.cdc
src/flow/contracts/: PetShopContract.cdc  WowToken.cdc
src/flow/scripts/pets/: CheckAccountInitialized.cdc  CheckTokenMetadata.cdc  GetAccountTokenIds.cdc  GetAccountTokenIds.script .ts  GetAccountTokenIds.script.ts  GetAllExistingTokenIds.cdc  GetAllExistingTokenIds.script.ts  GetAllTokenIds.cdc  GetAllTokenIds.script.ts  GetTokenMetadata.script.ts  GetTokenOwner.cdc  GetTokenOwner.script.ts  TokenData.tsx  TokenData.tsx.bak
src/flow/scripts/tokens/: CheckTokenBalance.cdc
src/flow/transactions/pets/: MintPetToken.cdc  MintPetToken.tx.ts  NFTCollectionExists.cdc  NFTMinterExists.cdc  SetupReceiverAccount.cdc  (+7 more)
src/state/: app.tsx  pets.ts  pets.tsx
transactions/: MintPet.cdc
ui/: package-lock.json  package.json
ui/src/: App.tsx  AuthCluster.js  Nav.tsx  config.js  index.tsx  theme.scss
(+4 files in other folders)
