[package]
name = "minter"
version = "0.1.0"
edition = "2018"
description = "Mint all the NFTs via Flow CLI"
author = "Pan <pan@fil.org>"


[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"

